--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "magento2"
     ],
     "require": {
+        "guzzle/guzzle": "3.9.*"
     },
     "type": "magento2-module",
     "autoload": {
