--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "justinkase/module-canadapost-rates",
     "description":"Magento 2 module to integrate Canada Post shipping rates.",
+    "version": "0.0.1",
     "keywords": [
         "magento 2",
         "magento2",
@@ -11,7 +12,11 @@
         "magento shipping module"
     ],
     "require": {
-        "guzzle/guzzle": "3.9.*"
+        "php": "7.0.2|7.0.4|~7.0.6|~7.1.0",
+        "guzzlehttp/guzzle": "^6.3.3",
+        "magento/module-config": "~101.0.0",
+        "magento/module-store": "~100.2.0",
+        "magento/framework": "~101.0.0"
     },
     "type": "magento2-module",
     "autoload": {
