--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,7 @@
     ],
     "require": {
         "php": "7.0.2|7.0.4|~7.0.6|~7.1.0",
-        "guzzlehttp/guzzle": "^6.3.3",
-        "magento/module-config": "~101.0.0",
-        "magento/module-store": "~100.2.0",
-        "magento/framework": "~101.0.0"
+        "guzzlehttp/guzzle": "^6.3.3"
     },
     "type": "magento2-module",
     "autoload": {
